<resources>
    <string name="app_bar_bottom">App Bar Bottom</string>
    <string name="search">Search</string>
    <string name="more">More</string>

    <string name="app_bar_top">App Bar Top</string>
    <string name="page_title">Page title</string>

    <string name="button">Button</string>

    <string name="floating_action_button">Floating Action Button</string>

    <string name="card">Card</string>
    <string name="card_title">Card Title</string>
    <string name="secondary_text">Secondary text</string>
    <string name="supporting_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="action">Action</string>

    <string name="checkbox">Checkbox</string>

    <string name="chip">Chip</string>
    <string name="input">Input</string>
    <string name="choice">Choice</string>
    <string name="filter">Filter</string>

    <string name="dialog">Dialog</string>
    <string name="alert">Alert</string>
    <string name="simple">Simple</string>
    <string name="confirm">Confirm</string>
    <string name="full">Full</string>

    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>

    <string name="divider">Divider</string>

    <string name="menu">Menu</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="text_menu">This text opens a context menu when long pressed.</string>
    <string name="show_menu">Show Menu</string>
    <string name="list_menu">List Menu</string>
    <string name="label">Label</string>

    <string name="progress">Progress</string>

    <string name="radio">Radio</string>

    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="standard">Standard</string>
    <string name="modal">Modal</string>

    <string name="slider">Slider</string>

    <string name="snackbar">Snackbar</string>
    <string name="show_snackbar">Show Snackbar</string>

    <string name="switches">Switches</string>

    <string name="tab">Tab</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>

    <string name="text_field">Text Field</string>
    <string name="helper_text">Helper text</string>
    <string name="error">Error</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>

    <string name="date_picker">Date Picker</string>
    <string name="date_range_picker">Date Range Picker</string>

    <string name="time_picker">Time Picker</string>
</resources>