<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alert"
        app:layout_constraintEnd_toStartOf="@id/simple_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_dialog" />

    <Button
        android:id="@+id/simple_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple"
        app:layout_constraintBottom_toBottomOf="@id/alert_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/alert_dialog"
        app:layout_constraintTop_toTopOf="@id/alert_dialog" />

    <Button
        android:id="@+id/confirmation_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@id/full_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog" />

    <Button
        android:id="@+id/full_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        app:layout_constraintBottom_toBottomOf="@id/confirmation_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirmation_dialog"
        app:layout_constraintTop_toTopOf="@id/confirmation_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>