<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="16dp">

    <!--
    app:singleLine="true"
    app:chipMinTouchTargetSize
    app:chipSpacingHorizontal
    app:singleSelection
    app:selectionRequired

    style="?attr/chipStyle"
    style="?attr/chipGroupStyle"
    style="?attr/chipStandaloneStyle"
    -->

    <TextView
        android:id="@+id/title_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_chip">

        <com.google.android.material.chip.Chip
            android:id="@+id/input_chip"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input" />

        <com.google.android.material.chip.Chip
            android:id="@+id/choice_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/action_chip"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            app:chipIcon="@drawable/ic_favorite" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>